[tool.poetry]
name = "minecraft-java-server-monitor"
version = "0.1.0"
description = ""
authors = ["Christian Lisle <lisleachristian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mcstatus = "9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
